--- a/src/Terratype/App_Plugins/Terratype/Views/editor.html
+++ b/src/Terratype/App_Plugins/Terratype/Views/editor.html
@@ -21,7 +21,7 @@
                 </ng-include>
             </div>
             <div ng-show="config().debug != 0">
-                <div ng-show="error" style="color:red;">
+                <div ng-show="view().error" style="color:red;">
                     <localize key="terratypeEditor_error">Error loading Terratype control, the json below is corrupt</localize>
                 </div>
                 <textarea style="height:300px;width:100%;margin:20px 10px 0 0;background-color:khaki;color:black;" spellcheck=false ng-model="model.value" terratype-json></textarea>
