--- a/src/Terratype.TestSite/Views/Single.cshtml
+++ b/src/Terratype.TestSite/Views/Single.cshtml
@@ -64,6 +64,15 @@ Jquery is @jquery
         <dd>
             @Model.Content.Map.Icon.Url
         </dd>
+
+        <dt>
+            Api Key
+        </dt>
+        <dd>
+            @((Model.Content.Map.Provider as Terratype.Providers.GoogleMapsV3).ApiKey)
+        </dd>
+
+
     </dl>
 
     <div id="pretend-accordion" style="display:@(Request.QueryString["show"] != null ? "display" : "none");">
@@ -83,6 +92,5 @@ Jquery is @jquery
     </div>
 
     <button onclick="var a = document.getElementById('pretend-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
-
 
 </fieldset>
